fix: fix overflow for nonogram

--- a/src/components/App/App.scss
+++ b/src/components/App/App.scss
@@ -10,7 +10,7 @@
 
 [data-bs-theme='light'] {
     body {
-        background-image: url('../../image/5c6fbcc18371616914795402.jpg');
+        background-image: url('https://img.freepik.com/premium-photo/watercolor-paper-texture-background_43429-21.jpg?w=1380');
         background-repeat: repeat;
         background-size: 100vw 100vh;
     }
